STM/.metadata/.plugins/org.eclipse.cdt.ui/Receive from hercules.build.log
09:40:52 **** Incremental Build of configuration Debug for project Receive from hercules ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:164:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  164 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:199:13: error: invalid storage class for function 'MX_GPIO_Init'
  199 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:239:1: error: expected declaration or statement at end of input
  239 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:52:13: warning: 'MX_GPIO_Init' used but never defined
   52 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:53:13: warning: 'MX_USART2_UART_Init' used but never defined
   53 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:230:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  230 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:213:6: warning: 'HAL_UART_RxCpltCallback' defined but not used [-Wunused-function]
  213 | void HAL_UART_RxCpltCallback(UART_HandleTypeDef *huart)
      |      ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:199:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  199 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:164:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  164 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:113:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  113 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

09:40:52 Build Failed. 4 errors, 7 warnings. (took 501ms)

